<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/TextViewTitle"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/add_choice_title"
                android:textSize="10pt">
        </TextView>
        <EditText
                android:id="@+id/editDescription"
                android:layout_height="match_parent"
                android:hint="@string/edit_description"
                android:inputType="textPersonName"
                android:layout_width="match_parent">
        </EditText>

        <EditText
                android:id="@+id/editTags"
                android:layout_height="95dp"
                android:hint="@string/edit_tags"
                android:layout_width="fill_parent" android:inputType="text">
        </EditText>

        <Spinner
                android:id="@+id/SpinnerFeedbackType"
                android:layout_height="60dp"
                android:prompt="@string/feedback_type"
                android:layout_width="fill_parent"
                android:entries="@array/typeList">
        </Spinner>

        <Button
                android:id="@+id/ButtonSendFeedback"
                android:layout_height="wrap_content"
                android:text="@string/add_choice_button"
                android:onClick="addToDB"
                android:layout_width="fill_parent">
        </Button>

    </LinearLayout>
</ScrollView>